@@ -12,6 +12,7 @@ Changes
 * Add `similar_by_word()` and `similar_by_vector()` to word2vec (@isohyt, #381)
 * Convenience method for similarity of two out of training sentences to doc2vec (@ellolo, #707)
 * Dynamic Topic Modelling Tutorial updated with Dynamic Influence Model (@bhargavvader, #689)
+* Added function to filter 'n' most frequent words from the dictionary (@abhinavchawla, #718)
 
 0.12.4, 29/01/2016
 * Better internal handling of job batching in word2vec (#535)
